--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4" style="color: white"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8" style="color:gray">vad.inc8@gmail.com </div>
+              <div class="col-sm-8" style="color:gray">vad.inc8@gmail.com. </div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4" style="color: white"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8" style="color:gray">+2349072045997</div>
+              <div class="col-sm-8" style="color:gray">+2349072045997.</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4" style="color: white"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8" style="color:gray"> Oyo State, Nigeria</div>
+              <div class="col-sm-8" style="color:gray"> Oyo State, Nigeria.</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4" style="color: white"><strong class="text-uppercase">Language:</strong></div>
-              <div class="col-sm-8" style="color:gray">English <p> Full working proficiency (C2, 4/4+) Highly proficient in speaking and writing (B2-C1,2/2+/3/3+)</p></div>
-              <div class="col-sm-8" style="color:gray">Yoruba <p> Native / full working proficiency (C2, 4/4+) </p></div>
-              <div class="col-sm-8" style="color:gray">Spanish <p> Elementary proficiency (A2, 1) </p> </div>
+              <div class="col-sm-8" style="color:gray">English <p> Full working proficiency (C2, 4/4+) Highly proficient in speaking and writing (B2-C1,2/2+/3/3+).</p></div>
+              <div class="col-sm-8" style="color:gray">Yoruba <p> Native / full working proficiency (C2, 4/4+).</p></div>
+              <div class="col-sm-8" style="color:gray">Spanish <p> Elementary proficiency (A2, 1).</p> </div>
             </div>
              </div>
           
@@ -541,18 +541,18 @@
 
               </p>
             <p class="" style="color:grey">
-» - Php Web chat application (Vchat)
+» - Php Web chat application (Vchat).
 
 
               </p>
              <p class="" style="color:grey">
-         » - Data visualization using python
+         » - Data visualization using python.
 
 
 
               </p>
               <p class="" style="color:grey">
-         » - Data aggregation using python
+         » - Data aggregation using python.
 
 
               </p>
@@ -562,12 +562,12 @@
 
               </p>
               <p class="" style="color:grey">
-         » - C+ Solutions
+         » - C+ Solutions.
 
 
               </p>
               <p class="" style="color:grey">
-         » - JavaScript calculator
+         » - JavaScript calculator.
 
 
               </p>
@@ -605,14 +605,14 @@ Express, Mongo db.
 
               </p>
              <p class="" style="color:grey">
-         » - Bar code generator using Php
+         » - Bar code generator using Php.
 
 
 
 
               </p>
              <p class="" style="color:grey">
-         » - Others
+         » - Others.
 
 
 
@@ -659,8 +659,8 @@ Express, Mongo db.
 <div class="card" style="background:#40404040">
       <div class="row">
         <div class="col-md-3 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-experience-header">
-            <p>April 2022 - Present
+          <div class="card-body cc-experience-header" style='height:100%; width:100%;'>
+            <p>Apr 2022 - Jul 2022
               Tbilisi, Georgia</p>
             <div class="h5"> TeckLink 
             </div>
@@ -805,7 +805,7 @@ interface.
       <div class="row">
         <div class="col-md-3 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2019 - Present</p>
+            <p>2019 - 2023 </p>
             <div class="h5"> Bachelor of Engineering (B.Eng)</div>
           </div>
         </div>
