--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                      <div class="h4 mb-0 title" style="color:white">Victor Aremu David (VAD)</div> 
 
                               <div class="h6  mt-3 title" style="color:grey"> Software Developer from Nigeria.</div>
-                              <p style="color:gray">I'm a professional task solving Software Developer from Nigeria. I deliver quality and amazing solutions, with high and proficient skills required.</p>
+                              <p style="color:gray">I'm a professional task and problem solving Software Developer from Nigeria with more than 6 years of professional experience. I deliver quality and amazing solutions, with high and proficient skills required.</p>
 
 
 <p style="color:gray">I'm  well versed in team collaboration to formulate and conceptualize corporate web presence. Specialty embracing challenging projects requiring detailed coding changes, search engine-related considerations and security. Integrates knowledge of visual arts to develop functional, appealing, custom-made web products and services.</p>
